fix: align other day events to current day event div

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -153,7 +153,7 @@
 
 	.fc-col-header-cell.fc-day-today .date,
 	.fc-day-today .fc-daygrid-day-number {
-		@apply bg-blue-200 rounded-4xl h-7 w-7 flex items-center justify-center;
+		@apply bg-blue-200 rounded-4xl h-7 w-7 mb-1 flex items-center justify-center;
 	}
 }
 
